# AndroidStudioStudy

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/rd0394/rtmpdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: RtmpPusher.cpp  RtmpPusher.h  jni_onload.cpp
app/src/main/java/com/example/rd0394/rtmpdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/rd0394/rtmpdemo/: ExampleUnitTest.java
